--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - CheckState",
+            "request": "launch",
+            "mainClass": "CheckState",
+            "projectName": "Programacao_Concorrente_82defd46"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - PrintFile",
             "request": "launch",
             "mainClass": "PrintFile",
